# CollegeNColleagues

./: .gitignore  Business.cpp  CMakeLists.txt  Makefile  README.md  SaveFile.txt  TODOS.txt  classes.cpp  classes.h  effects.h  exploration.txt  ideas.txt  main.cpp
Assets/: FemaleIdle.txt  FemaleJumpDown.txt  FemaleJumpLeft.txt  FemaleJumpRight.txt  FemaleJumpUp.txt  FirstMap.txt  MaleIdle.txt  MaleJumpDown.txt  MaleJumpLeft.txt  MaleJumpRight.txt  MaleJumpUp.txt  PlayerIdle.txt  PlayerJump.txt  PlayerJumpDown.txt  PlayerJumpLeft.txt  PlayerJumpUp.txt  SecondMap.txt
docs/: Class_Diagram.jam  CollegeNColleagues.docx  Structure.txt  descrption.txt  exploration.txt  ideas.txt  rpg.txt
include/: Animation.h  Armor.h  Business.h  Camera.h  Character.h  Entity.h  FightLog.h  Frame.h  Game.h  Map.h  MapRendering.h  Potion.h  Slot.h  Teleporter.h  TextBox.h  TextLine.h  TextureUnit.h  TimeManager.h  UIBox.h  Weapon.h  classes.h  creature.h  effects.h  interfaces.hpp  inventory.h  items.h  map.hpp  spells.h
src/: Animation.cpp  Armor.cpp  Business.cpp  Business.cpp.term  Camera.cpp  Character.cpp  DrawMap.cpp  Entity.cpp  FightLog.cpp  Frame.cpp  Game.cpp  Map.cpp  MapRendereing.cpp  MapRendering.cpp  Menus.cpp  Potion.cpp  Slot.cpp  Teleporter.cpp  TextLine.cpp  TextureUnit.cpp  TimeManager.cpp  UIBox.cpp  Weapon.cpp  creature.cpp  effects.cpp  fight.cpp  init.cpp  inventory.cpp  items.cpp  main.cpp  main.cpp.EdeTest  spells.cpp
test/: Makefile  main.cpp
xcode/xcode/: main.cpp
xcode/xcode.xcodeproj/: project.pbxproj
(+4 files in other folders)
